Add map drawer This commit break map css. Will need to refactor how the map renders

--- a/client/less/main.less
+++ b/client/less/main.less
@@ -1,4 +1,4 @@
-            @import "lib/bootstrap/bootstrap";
+@import "lib/bootstrap/bootstrap";
 @import "lib/bootstrap-social/bootstrap-social";
 @import "lib/ionicons/ionicons";
 @import "lib/animate.min.less";
@@ -1158,3 +1158,4 @@ code {
 @import "toastr.less";
 @import "map.less";
 @import "wiki.less";
+@import "drawers.less";
